# resto

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs  lib.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/src/views/: root.rs
crates/http_client/: Cargo.toml
crates/http_client/src/: main.rs
crates/resto/: Cargo.toml
crates/resto/src/: app.rs  http_client.rs  logger.rs  main.rs  request.rs  ui.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  http_client.rs  vim.rs
crates/tui/src/utils/: format_key_values.rs
crates/vim/: Cargo.toml
crates/vim/src/: lib.rs
src/: app.rs  curl.rs  http_client.rs  main.rs  request.rs  response.rs  ui.rs  vim.rs
src/utils/: mod.rs
