[package]
name = "resto"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "resto http client"
homepage = "https://github.com/tednaaa/resto"
repository = "https://github.com/tednaaa/resto"
readme = "README.md"
keywords = ["tui", "http_client"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

unused_self = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
tui-textarea = "0.7.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
