
[workspace.package]
publish = false
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/http_client", "crates/tui"]


[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }


[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"

too_many_lines = "allow"
unused_self = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
