[package]
name = "resto"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "resto http client"
homepage = "https://github.com/tednaaa/resto"
repository = "https://github.com/tednaaa/resto"
keywords = ["tui", "http_client"]
readme = "README.md"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
tui-textarea = "0.7.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
arboard = "3.6.0"

tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
directories = "6.0.0"
lazy_static = "1.5.0"
